fixed svg excess space causing width out of viewport and  horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -15,23 +15,25 @@ body{
     padding-top: 10%;
     background: url("../images/hero-bg.svg");
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat;
+    background-size: contain;
     padding-bottom: 10px;
 }
-.hero-section img {
-    height: 70%;
-    margin-left: 50%;
-    transform: translate(-50%,-20%) scale(0.75);
+.hero-image img {
+    width: 40vw;
+    transform: translate(0,-20%) scale(0.75);
     -webkit-transition: 0.6s ease;
     transition: 0.6s ease;
     z-index: -10;
+    overflow: none;
+    
+    
 }
 
-.hero-section img:hover{
-    transform: translate(-60%,-20%) scale(0.8);
+.hero-image img:hover{
+    transform:  translate(0,-20%) scale(0.8);
     
-    transform-origin: right;
+    transform-origin: center;
 }
 
 .hero-section h1{
@@ -49,11 +51,13 @@ body{
 /*End of Hero Section Styles*/
 
 /*Responsive Properties*/
+
+/*
 @media only screen and (min-width: 400px) {
     .hero-section img {    
     margin-top: 10px;
     transform: translate(-50%,-20%) scale(0.6);    
     }
 }
-
+*/
 /*End of Responsive Properties*/
